--- a/src/SFA.Apprenticeships.Web.Recruit/Views/VacancyPosting/CreateVacancy.cshtml
+++ b/src/SFA.Apprenticeships.Web.Recruit/Views/VacancyPosting/CreateVacancy.cshtml
@@ -52,8 +52,8 @@
     </div>
 
     @Html.HiddenFor(model => model.Ukprn)
-    @Html.HiddenFor(model => model.Employer.ProviderSiteErn)
-    @Html.HiddenFor(model => model.Employer.Ern);
+    @Html.HiddenFor(model => model.ProviderSiteEmployerLink.ProviderSiteErn)
+    @Html.HiddenFor(model => model.ProviderSiteEmployerLink.Employer.Ern);
 
     <fieldset class="form-group">
         <button type="submit" class="button">Save and continue</button>
