--- a/src/SFA.Apprenticeships.Web.Recruit/Views/VacancyPosting/SelectEmployer.cshtml
+++ b/src/SFA.Apprenticeships.Web.Recruit/Views/VacancyPosting/SelectEmployer.cshtml
@@ -1,5 +1,5 @@
 ﻿@using SFA.Apprenticeships.Web.Recruit.Constants
-@model SFA.Apprenticeships.Web.Recruit.ViewModels.VacancyPosting.EmployerFilterViewModel
+@model SFA.Apprenticeships.Web.Recruit.ViewModels.VacancyPosting.EmployerSearchViewModel
 @{
     ViewBag.Title = "Recruit an Apprentice - Select an employer for your vacancy";
 }
@@ -20,7 +20,7 @@
                     <div class="grid-wrapper">
                         @Html.FormTextFor(m => m.Ern, containerHtmlAttributes: new { @class = "grid grid-1-3" })
                         @Html.FormTextFor(m => m.Name, containerHtmlAttributes: new { @class = "grid grid-1-3" })
-                        @Html.FormTextFor(m => m.Postcode, containerHtmlAttributes: new { @class = "grid grid-1-3" })
+                        @Html.FormTextFor(m => m.Location, containerHtmlAttributes: new { @class = "grid grid-1-3" })
                     </div>
                     <div class="form-group">
                         <button class="button">Filter</button>
