--- a/src/SFA.Apprenticeships.Web.Recruit/Views/VacancyPosting/ConfirmNewEmployer.cshtml
+++ b/src/SFA.Apprenticeships.Web.Recruit/Views/VacancyPosting/ConfirmNewEmployer.cshtml
@@ -1,5 +1,7 @@
-﻿@{
-    ViewBag.Title = "Recruit an Apprentice - Create New Vacancy - Add employer description";
+﻿@model SFA.Apprenticeships.Web.Recruit.ViewModels.Provider.ProviderSiteEmployerLinkViewModel
+@using SFA.Apprenticeships.Web.Recruit.Constants
+@{
+    ViewBag.Title = "Recruit an Apprentice - Add employer description";
 }
 
 <div class="grid-wrapper">
@@ -8,4 +10,44 @@
             Add employer description
         </h1>
     </div>
+</div>
+<div class="grid-wrapper">
+    @using (Html.BeginRouteForm(RecruitmentRouteNames.ComfirmNewEmployer, FormMethod.Post))
+    {
+        @Html.Partial("ValidationSummary", ViewData.ModelState)
+
+        @Html.HiddenFor(m => m.ProviderSiteErn)
+        @Html.HiddenFor(m => m.Employer.Ern)
+
+        <div class="grid grid-1-2">
+            <div class="inner-block-padr">
+                <h3 class="bold-small">Employer</h3>
+                <p class="small-btm-margin">@Model.Employer.Name</p>
+                @if (Model.IsWebsiteUrlWellFormed)
+                {
+                    <p>
+                        <a href="@Model.WebsiteUrl" target="_blank" rel="external">@Model.WebsiteUrl</a>
+                    </p>
+                }
+                <h3 class="bold-small">Address</h3>
+                <p class="small-btm-margin">@Model.Employer.Address.AddressLine1</p>
+                <p class="small-btm-margin">@Model.Employer.Address.AddressLine2</p>
+                <p class="small-btm-margin">@Model.Employer.Address.AddressLine3</p>
+                <p class="small-btm-margin">@Model.Employer.Address.AddressLine4</p>
+                <p class="small-btm-margin">@Model.Employer.Address.Postcode</p>
+            </div>
+        </div>
+        <div class="grid grid-1-2 hide-print">
+            <div class="ad-details__map">
+                <div class="map-overlay" onClick="style.pointerEvents = 'none'"></div>
+                <iframe width="700" height="250" frameborder="0" style="border: 0" src="https://www.google.com/maps/embed/v1/place?q=@Model.Employer.Address.Postcode,+United+Kingdom&key=AIzaSyCusA_0x4bJEjU-_gLOFiXMSBXKZYtvHz8"></iframe>
+                <p class="nojs-notice">You must have JavaScript enabled to view a map of the location</p>
+            </div>
+        </div>
+        <div class="grid grid-1-1">
+            @Html.FormTextAreaFor(m => m.Description, controlHtmlAttributes: new { @class = "width-all-1-1", type = "text", size = 12, style = "height: 200px;" }, labelHtmlAttributes: new { @class = "bold-small" })
+            <button class="button">Save description and link to employer</button>
+            <a href="@Url.RouteUrl(RecruitmentRouteNames.SelectNewEmployer, new {providerSiteErn = Model.ProviderSiteErn})">Choose another employer</a>
+        </div>
+    }
 </div>
