--- a/src/SFA.Apprenticeships.Web.Recruit/Views/VacancyPosting/SelectNewEmployer.cshtml
+++ b/src/SFA.Apprenticeships.Web.Recruit/Views/VacancyPosting/SelectNewEmployer.cshtml
@@ -26,21 +26,21 @@
         <div class="form-group inline clearfix blocklabel-single hide-nojs">
             @* ReSharper disable once Html.IdNotResolved *@
             <label data-target="name-location-search-panel" for="name-location-search" class="block-label @nameAndLocationSearchSelected">
-                @Html.RadioButtonFor(model => model.FilterType, EmployerFilterType.NameAndLocation, new { id = "name-location-search", aria_controls = "name-location-search-panel" })
+                @Html.RadioButtonFor(model => model.FilterType, EmployerFilterType.NameAndLocation, new {id = "name-location-search", aria_controls = "name-location-search-panel"})
                 Name and location
             </label>
             @* ReSharper disable once Html.IdNotResolved *@
             <label data-target="ern-search-panel" for="ern-search" class="block-label @ernSearchSelected">
-                @Html.RadioButtonFor(model => model.FilterType, EmployerFilterType.Ern, new { id = "ern-search", aria_controls = "ern-search-panel" })
+                @Html.RadioButtonFor(model => model.FilterType, EmployerFilterType.Ern, new {id = "ern-search", aria_controls = "ern-search-panel"})
                 ERN
             </label>
         </div>
 
-        @using (Html.BeginRouteForm(RecruitmentRouteNames.SelectNewEmployer, FormMethod.Post, new { @id = "#ern-search-form" }))
+        @using (Html.BeginRouteForm(RecruitmentRouteNames.SelectNewEmployer, FormMethod.Post, new {@id = "#ern-search-form"}))
         {
             @Html.AntiForgeryToken()
 
-            @Html.HiddenFor(m => m.ProviderSiteErn);
+            @Html.HiddenFor(m => m.ProviderSiteErn)
 
             <div id="ern-search-panel" class="toggle-content blocklabel-content">
                 @Html.FormTextFor(model => model.Ern)
@@ -51,11 +51,11 @@
             </div>
         }
 
-        @using (Html.BeginRouteForm(RecruitmentRouteNames.SelectNewEmployer, FormMethod.Post, new { @id = "#name-location-search-form" }))
+        @using (Html.BeginRouteForm(RecruitmentRouteNames.SelectNewEmployer, FormMethod.Post, new {@id = "#name-location-search-form"}))
         {
             @Html.AntiForgeryToken()
 
-            @Html.HiddenFor(m => m.ProviderSiteErn);
+            @Html.HiddenFor(m => m.ProviderSiteErn)
 
             <div id="name-location-search-panel" class="toggle-content blocklabel-content">
                 @Html.FormTextFor(model => model.Name)
@@ -67,4 +67,49 @@
             </div>
         }
     </div>
+
+    @if (Model.EmployerResults != null && Model.EmployerResults.Any())
+    {
+        <section class="clearfix" id="providerSiteResults">
+            <h2 class="heading-small">Employers</h2>
+            <div class="grid grid-3-3 scrolling-panel max-height-15">
+                <table>
+                    <colgroup>
+                        <col class="t30">
+                        <col class="t40">
+                        <col class="t15">
+                        <col class="t15">
+                        <col>
+                    </colgroup>
+                    <tbody>
+                    <tr>
+                        <th>Name</th>
+                        <th>Address</th>
+                        <th>ERN</th>
+                        <th></th>
+                    </tr>
+                    @foreach (var employerResultsViewModel in @Model.EmployerResults)
+                    {
+                        <tr>
+                            <th>
+                                <h4 class="bold-small">@employerResultsViewModel.EmployerName</h4>
+                            </th>
+                            <td>
+                                @employerResultsViewModel.Address.AddressLine1
+                                <br/>@employerResultsViewModel.Address.AddressLine2
+                                <br/>@employerResultsViewModel.Address.Postcode
+                            </td>
+                            <td>@employerResultsViewModel.Ern</td>
+                            <td>
+                                <a href="@Url.RouteUrl(RecruitmentRouteNames.ComfirmNewEmployer, new {providerSiteErn = Model.ProviderSiteErn, ern = employerResultsViewModel.Ern})">Select employer</a>
+                            </td>
+                        </tr>
+                    }
+                    </tbody>
+                </table>
+            </div>
+
+            <a href="@Url.RouteUrl(RecruitmentRouteNames.SelectNewEmployer, new {providerSiteErn = Model.ProviderSiteErn})">Link to a new employer</a>
+        </section>
+    }
 </div>
