--- a/src/SFA.Apprenticeships.Web.Recruit/Views/VacancyPosting/SelectNewEmployer.cshtml
+++ b/src/SFA.Apprenticeships.Web.Recruit/Views/VacancyPosting/SelectNewEmployer.cshtml
@@ -68,10 +68,13 @@
         }
     </div>
 
-    @if (Model.EmployerResults != null && Model.EmployerResults.Any())
+    @if (Model.ResultsCount > 0)
     {
         <section class="clearfix" id="providerSiteResults">
-            <h2 class="heading-small">Employers</h2>
+            @{
+                var resultsMessage = Model.ResultsCount > 1 ? string.Format("Found {0} Employers", Model.ResultsCount) : "Found one employer";
+            }
+            <h2 class="heading-small">@resultsMessage</h2>
             <div class="grid grid-3-3 scrolling-panel max-height-15">
                 <table>
                     <colgroup>
@@ -111,5 +114,22 @@
 
             <a href="@Url.RouteUrl(RecruitmentRouteNames.SelectNewEmployer, new {providerSiteErn = Model.ProviderSiteErn})">Link to a new employer</a>
         </section>
+
+        <div class="page-navigation">
+            <a href="#"
+                style="visibility: @(Model.CurrentPage == 1 ? "hidden" : "visible")"
+                class="page-navigation__btn previous">
+                <i class="arrow-button fa fa-angle-left"></i>
+                <span class="description">Previous <span class="hide-mob">page</span></span>
+                <span class="counter">@(Model.CurrentPage + 1) of @Model.TotalNumberOfPages</span>
+            </a>
+            <a href="#"
+                style="visibility: @(Model.CurrentPage == Model.TotalNumberOfPages ? "hidden" : "visible")"
+                class="page-navigation__btn next">
+                <i class="arrow-button fa fa-angle-right"></i>
+                <span class="description">Next <span class="hide-mob">page</span></span>
+                <span class="counter">@(Model.CurrentPage + 1) of @Model.TotalNumberOfPages</span>
+            </a>
+        </div>
     }
 </div>
