--- a/src/SFA.Apprenticeships.Web.Recruit/Views/VacancyPosting/SelectEmployer.cshtml
+++ b/src/SFA.Apprenticeships.Web.Recruit/Views/VacancyPosting/SelectEmployer.cshtml
@@ -41,6 +41,7 @@
                         @Html.AntiForgeryToken()
 
                         <div id="ern-search-panel" class="toggle-content blocklabel-content">
+                            @Html.HiddenFor(model => model.ProviderSiteErn)
                             @Html.FormTextFor(model => model.Ern)
 
                             <button id="ern-search-button" type="submit" name="SearchExistingEmployerByReferenceNumber" value="SearchExistingEmployerByReferenceNumber" class="button">
@@ -56,6 +57,7 @@
                         @Html.AntiForgeryToken()
 
                         <div id="name-location-search-panel" class="toggle-content blocklabel-content">
+                            @Html.HiddenFor(model => model.ProviderSiteErn)
                             @Html.FormTextFor(model => model.Name)
                             @Html.FormTextFor(model => model.Location)
 
