--- a/src/SFA.Apprenticeships.Web.Recruit/Views/VacancyPosting/SelectEmployer.cshtml
+++ b/src/SFA.Apprenticeships.Web.Recruit/Views/VacancyPosting/SelectEmployer.cshtml
@@ -42,6 +42,7 @@
 
                         <div id="ern-search-panel" class="toggle-content blocklabel-content">
                             @Html.HiddenFor(model => model.ProviderSiteErn)
+                            @Html.Hidden("FilterType", EmployerFilterType.Ern)
                             @Html.FormTextFor(model => model.Ern)
 
                             <button id="ern-search-button" type="submit" name="SearchExistingEmployerByReferenceNumber" value="SearchExistingEmployerByReferenceNumber" class="button">
@@ -58,6 +59,7 @@
 
                         <div id="name-location-search-panel" class="toggle-content blocklabel-content">
                             @Html.HiddenFor(model => model.ProviderSiteErn)
+                            @Html.Hidden("FilterType", EmployerFilterType.NameAndLocation)
                             @Html.FormTextFor(model => model.Name)
                             @Html.FormTextFor(model => model.Location)
 
