--- a/src/SFA.Apprenticeships.Web.Recruit/Views/VacancyPosting/SelectNewEmployer.cshtml
+++ b/src/SFA.Apprenticeships.Web.Recruit/Views/VacancyPosting/SelectNewEmployer.cshtml
@@ -36,32 +36,30 @@
             </label>
         </div>
 
-        @using (Html.BeginRouteForm(RecruitmentRouteNames.SelectNewEmployer, FormMethod.Post, new {@id = "#ern-search-form"}))
+        @using (Html.BeginRouteForm(RecruitmentRouteNames.SelectNewEmployer, FormMethod.Get, new {@id = "#ern-search-form"}))
         {
-            @Html.AntiForgeryToken()
-
             @Html.HiddenFor(m => m.ProviderSiteErn)
+            @Html.Hidden("FilterType", EmployerFilterType.Ern)
 
             <div id="ern-search-panel" class="toggle-content blocklabel-content">
                 @Html.FormTextFor(model => model.Ern)
 
-                <button id="ern-search-button" type="submit" name="SelectNewEmployerByReferenceNumber" value="SelectNewEmployerByReferenceNumber" class="button">
+                <button id="ern-search-button" type="submit" class="button">
                     Find employer
                 </button>
             </div>
         }
 
-        @using (Html.BeginRouteForm(RecruitmentRouteNames.SelectNewEmployer, FormMethod.Post, new {@id = "#name-location-search-form"}))
+        @using (Html.BeginRouteForm(RecruitmentRouteNames.SelectNewEmployer, FormMethod.Get, new {@id = "#name-location-search-form"}))
         {
-            @Html.AntiForgeryToken()
-
             @Html.HiddenFor(m => m.ProviderSiteErn)
+            @Html.Hidden("FilterType", EmployerFilterType.NameAndLocation)
 
             <div id="name-location-search-panel" class="toggle-content blocklabel-content">
                 @Html.FormTextFor(model => model.Name)
                 @Html.FormTextFor(model => model.Location)
 
-                <button id="name-location-search-button" type="submit" name="SelectNewEmployerByNameAndLocation" value="SelectNewEmployerByNameAndLocation" class="button">
+                <button id="name-location-search-button" type="submit" class="button">
                     Search
                 </button>
             </div>
