--- a/src/SFA.Apprenticeships.Web.Recruit/Views/VacancyPosting/SelectEmployer.cshtml
+++ b/src/SFA.Apprenticeships.Web.Recruit/Views/VacancyPosting/SelectEmployer.cshtml
@@ -34,7 +34,7 @@
                         </label>
                     </div>
 
-                    @using (Html.BeginRouteForm(RecruitmentRouteNames.SearchExistingEmployer, FormMethod.Post, new {@id = "#ern-search-form"}))
+                    @using (Html.BeginRouteForm(RecruitmentRouteNames.SearchExistingEmployer, FormMethod.Get, new {@id = "#ern-search-form"}))
                     {
 
                         @Html.Partial("ValidationSummary", ViewData.ModelState)
@@ -42,7 +42,6 @@
 
                         <div id="ern-search-panel" class="toggle-content blocklabel-content">
                             @Html.HiddenFor(model => model.ProviderSiteErn)
-                            @Html.Hidden("FilterType", EmployerFilterType.Ern)
                             @Html.FormTextFor(model => model.Ern)
 
                             <button id="ern-search-button" type="submit" name="SearchExistingEmployerByReferenceNumber" value="SearchExistingEmployerByReferenceNumber" class="button">
@@ -51,7 +50,7 @@
                         </div>
                     }
 
-                    @using (Html.BeginRouteForm(RecruitmentRouteNames.SearchExistingEmployer, FormMethod.Post, new {@id = "#name-location-search-form"}))
+                    @using (Html.BeginRouteForm(RecruitmentRouteNames.SearchExistingEmployer, FormMethod.Get, new {@id = "#name-location-search-form"}))
                     {
 
                         @Html.Partial("ValidationSummary", ViewData.ModelState)
@@ -59,7 +58,6 @@
 
                         <div id="name-location-search-panel" class="toggle-content blocklabel-content">
                             @Html.HiddenFor(model => model.ProviderSiteErn)
-                            @Html.Hidden("FilterType", EmployerFilterType.NameAndLocation)
                             @Html.FormTextFor(model => model.Name)
                             @Html.FormTextFor(model => model.Location)
 
