--- a/src/SFA.Apprenticeships.Web.Recruit/Views/VacancyPosting/SelectEmployer.cshtml
+++ b/src/SFA.Apprenticeships.Web.Recruit/Views/VacancyPosting/SelectEmployer.cshtml
@@ -86,7 +86,7 @@
                     <th>ERN</th>
                     <th></th>
                 </tr>
-                @foreach (var employerResultsViewModel in @Model.EmployerResults)
+                @foreach (var employerResultsViewModel in @Model.EmployerResultsPage.Page)
                 {
                     <tr>
                         <th>
