Removed scrollbar on vacancyposting/selectEmployer

--- a/src/SFA.Apprenticeships.Web.Recruit/Views/VacancyPosting/SelectEmployer.cshtml
+++ b/src/SFA.Apprenticeships.Web.Recruit/Views/VacancyPosting/SelectEmployer.cshtml
@@ -70,7 +70,7 @@
             </div>
         </details>
 
-        <div class="grid grid-3-3 scrolling-panel max-height-15">
+        <div class="grid grid-3-3">
             <table>
                 <colgroup>
                     <col class="t30">
