--- a/src/SFA.Apprenticeships.Web.Recruit/Views/VacancyPosting/ConfirmNewEmployer.cshtml
+++ b/src/SFA.Apprenticeships.Web.Recruit/Views/VacancyPosting/ConfirmNewEmployer.cshtml
@@ -23,12 +23,7 @@
             <div class="inner-block-padr">
                 <h3 class="bold-small">Employer</h3>
                 <p class="small-btm-margin">@Model.Employer.Name</p>
-                @if (Model.IsWebsiteUrlWellFormed)
-                {
-                    <p>
-                        <a href="@Model.WebsiteUrl" target="_blank" rel="external">@Model.WebsiteUrl</a>
-                    </p>
-                }
+                @Html.FormTextFor(model => model.WebsiteUrl, controlHtmlAttributes: new { type = "text" }, labelHtmlAttributes: new { @class = "bold-small" })
                 <h3 class="bold-small">Address</h3>
                 <p class="small-btm-margin">@Model.Employer.Address.AddressLine1</p>
                 <p class="small-btm-margin">@Model.Employer.Address.AddressLine2</p>
